common/common.scss
@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,700;0,900;1,300;1,400;1,500;1,700;1,900&display=swap');

@font-face {
  font-family: 'Rubik';
  font-style: normal;
  font-weight: bold;
  font-display: swap;
  src: local('Rubik Medium'), local('Rubik-Medium'), url(https://fonts.gstatic.com/s/rubik/v9/iJWHBXyIfDnIV7Eyjmmd8WD07oB-.woff2) format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}
$base-font-family: 'Rubik', sans-serif;

html {
  font-family: $base-font-family;

  body {
    background-image: var(--bg-img) !important;
    background-size: auto !important;
  }
}

.background-container{
  display:none;
}
.category-breadcrumb{
  display:none;
}
.suggested-topics{
  display:none;
}
.search-banner{
  display:none;
}

.category-heading{
  align-items: center;
  display: flex;
}

.category-logo.aspect-image {
  max-width: 80px;
}

#main-outlet{
  border: 1px solid var(--e4-hardborder) !important;
}
.category-box{
  border: 1px solid var(--e4-hardborder) !important;
}
.d-header{
  border-bottom: 1px solid var(--e4-hardborder) !important;
}
.topic-list-item{
  border: 1px solid var(--e4-softborder) !important;
}

/* -----------------------------------E4 navbar classes */
.e4-container {
  background-image: linear-gradient(var(--e4-gradient-medium), var(--e4-gradient-light), var(--e4-gradient-medium));
  border: 1px solid var(--e4-hardborder);
  border-radius: 10px;
}

.e4-button {
  > li {
    > a {
      background-image: linear-gradient(var(--e4-gradient-medium), var(--e4-gradient-dark));
      color: var(--e4-red);
      border: 1px solid var(--e4-softborder) !important;
      border-radius: 10px;
      text-transform: uppercase;

      &:hover {
        border: 1px solid var(--e4-hardborder) !important;
        color: var(--e4-red)  !important;
      }
    }
  }
}
/* -----------------------------------E4 navbar classes */

